feat(download): download waypoints as GeoJSON
